[package]
name = "blades-katex"
version = "0.1.2"
edition = "2021"

[dependencies]
blades = { version = "0.3", default_features = false }
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
beef = "0.5.2"
katex = "0.4"
logos = "0.12"
nohash-hasher = "0.2"
fnv = "1"
